# ChangeLog for app-office/kchart
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.96 2009/11/01 09:18:44 abcd Exp $

  01 Nov 2009; Jonathan Callen <abcd@gentoo.org> -kchart-1.6.3.ebuild,
  -kchart-2.0.0.ebuild, -kchart-2.0.1.ebuild:
  Drop old versions

  27 Sep 2009; Brent Baude <ranger@gentoo.org>
  kchart-1.6.3_p20090204.ebuild:
  Marking kchart-1.6.3_p20090204 ppc64 stable for bug 276008

*kchart-2.0.2 (12 Aug 2009)

  12 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org> +kchart-2.0.2.ebuild:
  Version bump to 2.0.2.

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  kchart-1.6.3_p20090204.ebuild:
  alpha/ia64/sparc stable wrt #276008

  19 Jul 2009; nixnut <nixnut@gentoo.org> kchart-1.6.3_p20090204.ebuild:
  ppc stable #276008

  03 Jul 2009; Jeroen Roovers <jer@gentoo.org>
  kchart-1.6.3_p20090204.ebuild:
  Stable for HPPA (bug #276008).

  02 Jul 2009; Markus Meier <maekke@gentoo.org>
  kchart-1.6.3_p20090204.ebuild:
  amd64 stable, bug #276008

  01 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  kchart-1.6.3_p20090204.ebuild:
  stable x86, bug 276008

  30 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  -kchart-1.6.1.ebuild, kchart-1.6.3.ebuild, kchart-1.6.3_p20090204.ebuild:
  Slotmove to 3.5, remove old

*kchart-2.0.1 (25 Jun 2009)

  25 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org> +kchart-2.0.1.ebuild:
  Version bump to 2.0.1

*kchart-2.0.0 (28 May 2009)

  28 May 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -kchart-1.9.99.0.ebuild, +kchart-2.0.0.ebuild:
  Version bump for final koffice 2 series first release.

*kchart-1.9.99.0 (30 Apr 2009)

  30 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> +kchart-1.9.99.0.ebuild:
  Version bump for koffice-2.

*kchart-1.6.3_p20090204 (08 Feb 2009)

  08 Feb 2009; Carsten Lohrke <carlo@gentoo.org>
  +kchart-1.6.3_p20090204.ebuild:
  Sync to branch plus various fixes.
