@@ -1,6 +1,12 @@
 # ChangeLog for app-office/kchart
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.96 2009/11/01 09:18:44 abcd Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/kchart/Attic/ChangeLog,v 1.97 2009/11/22 16:21:26 tampakrap Exp $
+
+*kchart-2.1.0 (22 Nov 2009)
+
+  22 Nov 2009; Theo Chatzimichos <tampakrap@gentoo.org>
+  +kchart-2.1.0.ebuild:
+  version bump
 
   01 Nov 2009; Jonathan Callen <abcd@gentoo.org> -kchart-1.6.3.ebuild,
   -kchart-2.0.0.ebuild, -kchart-2.0.1.ebuild:
